--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ htmlmin==0.1.12
 idna==3.7
 ImageHash==4.3.1
 Jinja2==3.1.4
-joblib==1.1.1
+joblib==1.1.0  # Align with phik and pandas-profiling
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
@@ -29,7 +29,7 @@ missingno==0.5.2
 multimethod==1.12
 narwhals==1.4.2
 networkx==3.3
-numba==0.60.0
+numba==0.58.1  # Use the compatible version
 numpy==1.26.4
 packaging==24.1
 pandas==2.2.2
@@ -57,7 +57,7 @@ six==1.16.0
 smmap==5.0.1
 statsmodels==0.14.2
 streamlit==1.37.1
-streamlit-pandas-profiling==0.1.3
+streamlit-pandas-profiling==0.1.2  # Use a version compatible with other dependencies
 tangled-up-in-unicode==0.2.0
 tenacity==8.5.0
 toml==0.10.2
@@ -67,6 +67,6 @@ typeguard==4.3.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
-visions==0.7.6
+visions==0.7.5  # Compatible version for ydata-profiling and streamlit-pandas-profiling
 wordcloud==1.9.3
-ydata-profiling==4.9.0
+ydata-profiling==4.1.2  # Use a version compatible with visions
