--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ tqdm==4.66.5
 typeguard==4.3.0
 typing_extensions==4.12.2
 tzdata==2024.1
-urllib3==2.2.2
+urllib3
 visions==0.7.5
 wordcloud==1.9.3
 ydata-profiling==4.1.2
