--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ tangled-up-in-unicode==0.2.0
 tenacity==8.5.0
 toml==0.10.2
 tornado==6.4.1
-tqdm==4.66.5
+tqdm
 typeguard==4.3.0
 typing_extensions==4.12.2
 tzdata==2024.1
