--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ requests==2.28.2
 rich==13.7.1
 rpds-py==0.20.0
 scipy==1.9.3
-seaborn==0.13.2
+seaborn
 six==1.16.0
 smmap==5.0.1
 statsmodels==0.14.2
