--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ MarkupSafe==2.1.5
 matplotlib==3.6.3
 mdurl==0.1.2
 missingno==0.5.2
-multimethod==1.12
+multimethod
 narwhals==1.4.2
 networkx==3.3
 numba==0.58.1
