--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,71 @@
-altair==5.4.0
-annotated-types==0.7.0
-attrs==24.2.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-contourpy==1.2.1
-cycler==0.12.1
-dacite==1.8.1
-fonttools==4.53.1
-gitdb==4.0.11
-GitPython==3.1.43
-htmlmin==0.1.12
-idna==3.7
-ImageHash==4.3.1
-Jinja2==3.1.4
-joblib==1.1.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-llvmlite==0.41.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.6.3
-mdurl==0.1.2
-missingno==0.5.2
+altair
+annotated-types
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+contourpy
+cycler
+dacite
+fonttools
+gitdb
+GitPython
+htmlmin
+idna
+ImageHash
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+kiwisolver
+llvmlite
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+missingno
 multimethod
-narwhals==1.4.2
-networkx==3.3
-numba==0.58.1
-numpy==1.23.5
-packaging==24.1
-pandas==1.5.3
-patsy==0.5.6
-phik==0.12.4
-pillow==10.4.0
-protobuf==5.27.3
-pyarrow==17.0.0
-pydantic==1.10.5
-pydeck==0.9.1
-Pygments==2.18.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyWavelets==1.7.0
-PyYAML==6.0.2
-referencing==0.35.1
-requests==2.28.2
-rich==13.7.1
-rpds-py==0.20.0
-scipy==1.9.3
+narwhals
+networkx
+numba
+numpy
+packaging
+pandas
+patsy
+phik
+pillow
+protobuf
+pyarrow
+pydantic
+pydeck
+Pygments
+pyparsing
+python-dateutil
+pytz
+PyWavelets
+PyYAML
+referencing
+requests
+rich
+rpds-py
+scipy
 seaborn
-six==1.16.0
-smmap==5.0.1
-statsmodels==0.14.2
-streamlit==1.37.1
-streamlit-pandas-profiling==0.1.2
-tangled-up-in-unicode==0.2.0
-tenacity==8.5.0
-toml==0.10.2
-tornado==6.4.1
+six
+smmap
+statsmodels
+streamlit
+streamlit-pandas-profiling
+tangled-up-in-unicode
+tenacity
+toml
+tornado
 tqdm
-typeguard==4.3.0
-typing_extensions==4.12.2
-tzdata==2024.1
+typeguard
+typing_extensions
+tzdata
 urllib3
-visions==0.7.5
-wordcloud==1.9.3
-ydata-profiling==4.1.2
+visions
+wordcloud
+ydata-profiling
