--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,6 @@
-altair
-annotated-types
-attrs
-blinker
-cachetools
-certifi
-charset-normalizer
-click
-contourpy
-cycler
-dacite
-fonttools
-gitdb
-GitPython
-htmlmin
-idna
-ImageHash
-Jinja2
-joblib
-jsonschema
-jsonschema-specifications
-kiwisolver
-llvmlite
-markdown-it-py
-MarkupSafe
-matplotlib
-mdurl
-missingno
-multimethod
-narwhals
-networkx
-numba
-numpy
-packaging
-pandas
-patsy
-phik
-pillow
-protobuf
-pyarrow
-pydantic
-pydeck
-Pygments
-pyparsing
-python-dateutil
-pytz
-PyWavelets
-PyYAML
-referencing
-requests
-rich
-rpds-py
-scipy
-seaborn
-six
-smmap
-statsmodels
-streamlit
-streamlit-pandas-profiling
-tangled-up-in-unicode
-tenacity
-toml
-tornado
-tqdm
-typeguard
-typing_extensions
-tzdata
-urllib3
-wordcloud
-ydata-profiling==4.1.0
-visions==0.7.5
+numpy==1.23.4
+pandas==1.4.4
+pandas-profiling==3.2.0
+pydantic==1.10.7
+streamlit==1.37.1
+matplotlib==3.7.0
